# SkilledNursing

./: Makefile  README.md  pyproject.toml  reit_dashboard.py  requirements.txt
data/analysis/: all_chain_statistics.csv
data/interim/: all_chains_for_review.csv
data/matched/: ohi_cms_final_matches.csv
data/processed/: README.md  bls_employment_20251005_152742.csv  bls_ppi_20251005_152719.csv  ctre_properties_06_30_25.csv  ctre_state_summary.csv  ohi_facilities_q2_2025.csv  ohi_state_summary.csv  reit_properties.parquet  sbra_properties_06_30_25.csv  sbra_state_summary.csv  sec_ctre_assets_20251005_124225.csv  sec_ctre_longtermdebt_20251005_124225.csv  sec_ctre_longtermdebt_latest.csv  sec_ctre_realestateinvestmentpropertynet_20251005_124240.csv  sec_ctre_realestateinvestmentpropertynet_latest.csv  sec_ctre_revenues_20251005_124836.csv  sec_ctre_stockholdersequity_20251005_124240.csv  sec_ctre_stockholdersequity_20251005_124836.csv  sec_ohi_liabilities_20251005_124224.csv  sec_ohi_liabilities_20251005_124836.csv  sec_ohi_longtermdebt_20251005_124239.csv  sec_ohi_longtermdebt_20251005_124836.csv  sec_ohi_netincomeloss_latest.csv  sec_ohi_operatingincomeloss_20251005_124239.csv  sec_ohi_operatingincomeloss_20251005_124836.csv  sec_ohi_realestateinvestmentpropertynet_20251005_124239.csv  sec_ohi_realestateinvestmentpropertynet_latest.csv  sec_ohi_stockholdersequity_latest.csv  sec_sbra_liabilities_20251005_124240.csv  sec_sbra_liabilities_latest.csv  sec_sbra_longtermdebt_20251005_124240.csv  sec_sbra_longtermdebt_20251005_124837.csv  sec_sbra_netincomeloss_20251005_124837.csv  sec_sbra_revenues_latest.csv  sec_sbra_stockholdersequity_20251005_124240.csv
data/raw/: README_ohi_data.md  ctre_10k.html  ohi_10k_2024.html  ohi_10k_2024.txt  ohi_facilities_list_q2_2025.txt  ohi_facilities_summary.csv  ohi_schedule_iii_2024.csv  sbra_properties_06_30_25.xlsx  sbra_schedule_iii_chunk.txt  sbra_schedule_iii_table_32.html
data/visualizations/: ctre_bed_distribution.html  ctre_geographic_map.html  ctre_property_types.html  ohi_geographic_map.html  (+10 more)
scripts/: example_fetch_data.py
tests/: conftest.py
(+46 files in other folders)
